--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -13,7 +13,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           dvc repro
-          # git fetch --prune
+          git fetch --prune
       - name: train model
         env:
           REPO_TOKEN: ${{ secrets.CML_GITHUB_ACCESS_TOKEN }}
